<resources>
    <string name="app_name">SmartHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Home</string>
    <string name="nav_header_subtitle">smart@home.mk</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="status_change_success">Status changed successfully</string>
    <string name="status_change_error">Error changing status</string>
    <string name="status_check_error">Error checking status</string>
    <string name="label">Name</string>
    <string name="ip_address_hint">IP Address</string>
    <string name="command_hint">Command</string>
    <string name="gpio_hint">GPIO pin</string>
    <string name="duration_hint">duration</string>
    <string name="action_refresh">Refresh devices</string>
    <string name="add_new_device">Add new device</string>
    <string name="cancel">Cancel</string>
    <string name="add_device">Add device</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update_device">Update device</string>
    <string name="success">Success</string>
    <string name="ip_address_prefix">http://</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="bad_request">Check your IP address or GPIO</string>
    <string name="invalid_input">Invalid input</string>
    <string name="label_for">for</string>
    <string name="value_off">OFF</string>
    <string name="value_on">ON</string>
    <string name="state">State:</string>

</resources>